--- a/src/styles/Movie.css
+++ b/src/styles/Movie.css
@@ -22,22 +22,23 @@
   background-color: rgba(0, 0, 0, 0.3);
   padding: 5px;
   width: 55px;
-  text-align: center;
   border-radius: 0 25px 25px 0;
   border: 3px solid var(--primary);
-  font-family: 'Montserrat';
-  font-size: 22px;
+  display: flex;
+  align-items: center;
   position: absolute;
   top: 30px;
   left: -3px;
 }
 
 .movie-container .star {
-  width: 18px;
+  height: 14px;
+  width: 20px;
 }
 
 .movie-container span {
-  padding-left: 5px;
+  padding-left: 2px;
+  font-family: 'Montserrat';
   font-size: 20px;
   font-weight: 700;
 }
