--- a/src/styles/Slider.css
+++ b/src/styles/Slider.css
@@ -6,11 +6,16 @@
   overflow: hidden;
 }
 
-.slider-container img {
+.slider-container .banner {
   height: inherit;
   width: 100%;
   object-fit: cover;
   object-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.6s linear;
 }
 
 .slider-container .btn-container {
@@ -54,7 +59,41 @@
   vertical-align: middle;
 }
 
-.nextSlide,
-.prevSlide {
-  display: none;
+.banner.activeSlide {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.banner.nextSlide {
+  opacity: 0;
+  transform: translateX(110%);
+}
+
+.banner.prevSlide {
+  opacity: 0;
+  transform: translateX(-110%);
+}
+
+/* indicators */
+
+.ind-container {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-30px);
+}
+
+.indicator {
+  background-color: var(--grey);
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  margin: 5px;
+}
+
+.indicator.active {
+  background-color: var(--white);
+  border-radius: 40%;
+  width: 10px;
 }
