partially responsive now

--- a/src/styles/Movie.css
+++ b/src/styles/Movie.css
@@ -3,7 +3,7 @@
   font-family: 'Poppins';
   position: relative;
   width: 220px;
-  margin: 0 10px 50px 10px;
+  margin: 0 10px 10px;
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
