--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -4,3 +4,20 @@
   justify-content: center;
   gap: 1em;
 }
+
+.btn-container {
+  max-width: max-content;
+  margin: 20px auto;
+  display: flex;
+  gap: 10px;
+}
+
+.btn-container .btn {
+  font-family: 'Montserrat';
+  font-weight: 600;
+  background-color: var(--primary);
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
