--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -39,17 +39,20 @@
 
 .nav .sub-menu a {
   font-family: 'Montserrat';
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding: 0.3rem 0;
   color: var(--white);
+  border-bottom: 3px solid transparent;
   text-decoration: none;
   white-space: nowrap;
-  transition: all 0.3s ease;
+  transition: color 0.3s ease, border-bottom 0.2s ease;
 }
 
 .nav .sub-menu a:hover,
 .nav .sub-menu a.active-link {
   color: var(--primary);
   border-bottom: 3px solid var(--primary);
-  padding-bottom: 5px;
 }
 
 .nav .form {
@@ -93,7 +96,7 @@
 }
 
 .nav .form .btn:hover {
-  background-color: rgba(254, 217, 65, 0.8);
+  background-color: rgba(254, 217, 65, 0.9);
 }
 
 .nav .form .btn img {
