--- a/src/styles/Slider.css
+++ b/src/styles/Slider.css
@@ -15,7 +15,7 @@
   top: 0;
   left: 0;
   opacity: 0;
-  transition: all 0.6s linear;
+  transition: all 1s ease;
 }
 
 .slider-container .btn-container {
@@ -115,6 +115,11 @@
   border-radius: 50%;
   margin: 3px;
   transition: all 0.4s ease;
+  cursor: pointer;
+}
+
+.indicator:hover {
+  background-color: var(--white);
 }
 
 .indicator.active {
