--- a/src/styles/Slider.css
+++ b/src/styles/Slider.css
@@ -12,7 +12,8 @@
   object-fit: cover;
   object-position: center;
   position: absolute;
-  top: 0;
+  transform: translateY(-50%);
+  top: 50%;
   left: 0;
   opacity: 0;
   transition: all 1s ease;
@@ -64,17 +65,17 @@
 
 .banner.activeSlide {
   opacity: 1;
-  transform: translateX(0);
+  transform: translate(0, -50%);
 }
 
 .banner.nextSlide {
   opacity: 0;
-  transform: translateX(110%);
+  transform: translate(110%, -50%);
 }
 
 .banner.prevSlide {
   opacity: 0;
-  transform: translateX(-110%);
+  transform: translate(-110%, -50%);
 }
 
 @media screen and (max-width: 768px) {
