--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -60,6 +60,7 @@
   align-items: center;
   margin-left: auto;
   width: 350px;
+  opacity: 70%;
 }
 
 .nav .form input {
@@ -95,8 +96,18 @@
   transition: background-color 0.3s ease;
 }
 
-.nav .form .btn:hover {
+.nav .form .link {
+  line-height: 0;
+  pointer-events: none;
+}
+
+.nav .form .btn:enabled:hover {
   background-color: rgba(254, 217, 65, 0.9);
+}
+
+.nav .form .btn:disabled {
+  background-color: var(--grey);
+  cursor: not-allowed;
 }
 
 .nav .form .btn img {
