--- a/src/styles/Movie.css
+++ b/src/styles/Movie.css
@@ -1,4 +1,5 @@
 .movie-container {
+  color: white;
   background-color: var(--black);
   font-family: 'Poppins';
   position: relative;
@@ -7,6 +8,7 @@
   overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
 }
 
 .movie-container img {
