--- a/src/styles/Movie.css
+++ b/src/styles/Movie.css
@@ -9,6 +9,11 @@
   border-radius: 10px;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
   text-decoration: none;
+  transition: box-shadow 0.2s ease-in-out;
+}
+
+.movie-container:hover {
+  box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.2);
 }
 
 .movie-container img {
