--- a/src/styles/Movie.css
+++ b/src/styles/Movie.css
@@ -3,7 +3,7 @@
   background-color: var(--black);
   font-family: 'Poppins';
   position: relative;
-  width: 250px;
+  width: 185px;
   margin: 0 10px 10px;
   overflow: hidden;
   border-radius: 10px;
@@ -22,24 +22,24 @@
 }
 
 .movie-container > img {
-  min-height: 300px;
+  min-height: 250px;
 }
 
-.movie-container h3 {
-  margin: 1rem;
+.movie-container h4 {
+  margin: 0 0.5rem 0.5rem;
 }
 
 .movie-container .rating {
   background-color: rgba(0, 0, 0, 0.3);
-  padding: 5px;
-  width: 55px;
-  border-radius: 0 25px 25px 0;
+  padding: 3px;
+  width: 50px;
+  border-radius: 0 500px 500px 0;
   border: 3px solid var(--primary);
   display: flex;
   align-items: center;
   position: absolute;
   top: 30px;
-  left: -3px;
+  left: -4px;
 }
 
 .movie-container .star {
@@ -48,8 +48,8 @@
 }
 
 .movie-container span {
-  padding-left: 2px;
+  padding: 0 2px;
   font-family: 'Montserrat';
-  font-size: 20px;
+  font-size: 1.1rem;
   font-weight: 700;
 }
