--- a/src/styles/SingleMovie.css
+++ b/src/styles/SingleMovie.css
@@ -1,28 +1,53 @@
 .movie-details {
-  width: 100%;
+  width: inherit;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 20px;
-}
-
-.movie-details h1 {
-  margin: 0 0 20px;
-}
-
-.movie-details p {
-  width: 100%;
-  margin-bottom: 20px;
-  text-align: justify;
+  border-radius: 10px;
+  display: flex;
+  font-family: 'Poppins';
 }
 
 .details {
+  padding: 0 30px 0 50px;
+}
+
+.details h1 {
+  margin: 20px 0;
+  font-family: 'Montserrat';
+  font-weight: 800;
+}
+
+.details > p {
+  width: 100%;
+  margin: 50px 0;
+  text-align: justify;
+}
+
+.others {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   gap: 20px;
 }
 
-.details .genre {
+.others p {
+  margin: 0;
+  font-weight: 700;
+}
+
+.others span {
+  font-family: 'Montserrat';
+  font-weight: 500;
+}
+
+.others .genres {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.genres .genre {
   background-color: darkslateblue;
   padding: 3px 10px;
   border-radius: 500px;
