--- a/src/styles/SingleMovie.css
+++ b/src/styles/SingleMovie.css
@@ -1,5 +1,6 @@
 .movie-details {
   width: inherit;
+  min-width: 800px;
   background-color: rgba(255, 255, 255, 0.1);
   padding: 20px;
   border-radius: 10px;
