reorganised project structure

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@500;700&family=Montserrat:wght@400;500;700;800&display=swap');
+
+:root {
+  --black: #000;
+  --background: #0f0e17;
+  --primary: #fed941;
+  --grey: #a7a9be;
+  --white: #fffffe;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: var(--background);
+  color: var(--white);
+  margin: 0 auto;
+  width: 90%;
+  max-width: 1440px;
 }
 
 @media screen and (max-width: 480px) {
