--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,9 @@
 body {
   background-color: var(--background);
   color: var(--white);
-  margin: 0 auto;
-  width: 90%;
-  max-width: 1440px;
 }
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
   body {
     display: none;
   }
@@ -43,4 +40,4 @@ body {
     top: 50%;
     transform: translateX(-50%);
   }
-}
+} */
