--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -1,55 +1,48 @@
 .movieContainer {
+  width: 185px;
+  text-decoration: none;
+  font-family: 'Poppins';
   color: white;
   background-color: var(--black);
-  font-family: 'Poppins';
-  position: relative;
-  width: 185px;
-  margin: 0 10px 10px;
-  overflow: hidden;
   border-radius: 10px;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
-  text-decoration: none;
   transition: box-shadow 0.2s ease-in-out;
+  position: relative;
+  overflow: hidden;
 }
 
 .movieContainer:hover {
   box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.2);
 }
 
-.movieContainer img {
-  border-radius: 10px;
-  width: 100%;
-}
-
-.movieContainer > img {
+.movieContainer .poster {
   min-height: 250px;
+  border-radius: 10px;
 }
 
 .movieContainer h4 {
-  margin: 0 0.5rem 0.5rem;
+  margin: 0 0.5em 0.5em;
 }
 
-.movieContainer .rating {
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 3px;
-  width: 50px;
-  border-radius: 0 500px 500px 0;
-  border: 3px solid var(--primary);
-  display: flex;
-  align-items: center;
+.rating {
   position: absolute;
   top: 30px;
   left: -4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 3px 7px 3px 0px;
+  border: 3px solid var(--primary);
+  border-radius: 0 500px 500px 0;
 }
 
-.movieContainer .star {
-  height: 14px;
-  width: 20px;
+.rating .star {
+  transform: scale(0.7);
 }
 
-.movieContainer span {
-  padding: 0 2px;
+.rating .vote {
+  font-size: 1.1em;
   font-family: 'Montserrat';
-  font-size: 1.1rem;
   font-weight: 700;
 }
