tweaked Error, Footer & Loading page

--- a/src/components/Error.module.css
+++ b/src/components/Error.module.css
@@ -1,5 +1,13 @@
 .errorContainer {
+  width: max-content;
+  font-size: 40px;
   font-family: 'Montserrat';
-  font-size: 5rem;
-  padding: 5rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 150px auto;
+}
+
+.errorContainer span {
+  display: block;
+  margin-top: 20px;
 }
