--- a/src/components/SingleMovie.module.css
+++ b/src/components/SingleMovie.module.css
@@ -1,27 +1,35 @@
 .movieDetails {
-  width: inherit;
-  min-width: 800px;
-  background-color: rgba(255, 255, 255, 0.1);
-  padding: 20px;
-  border-radius: 10px;
-  display: flex;
   font-family: 'Poppins';
+  width: 100%;
+  min-width: 800px;
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.1);
+  margin: 0 auto;
+  padding: 30px;
+  border-radius: 5px;
+}
+
+.poster {
+  width: 300px;
+  border-radius: 10px;
 }
 
 .details {
-  padding: 0 30px 0 50px;
+  padding-left: 40px;
 }
 
-.details h1 {
-  margin: 20px 0;
+.details .title {
+  font-size: 80px;
   font-family: 'Montserrat';
   font-weight: 800;
+  padding: 10px 0;
 }
 
-.details > p {
+.details .overview {
   width: 100%;
-  margin: 50px 0;
+  font-size: 18px;
   text-align: justify;
+  margin: 20px 0;
 }
 
 .others {
@@ -29,27 +37,31 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 20px;
+  margin: 40px 0;
 }
 
-.others p {
-  margin: 0;
+.releaseDate,
+.genres,
+.runtime {
   font-weight: 700;
 }
 
-.others span {
+.releaseDate span,
+.genres span,
+.runtime span {
   font-family: 'Montserrat';
   font-weight: 500;
 }
 
-.others .genres {
+.genres {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   gap: 10px;
 }
 
-.genres .genre {
+.genres span {
   background-color: darkslateblue;
-  padding: 3px 10px;
+  padding: 5px 10px;
   border-radius: 500px;
 }
