--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -2,7 +2,7 @@
   width: max-content;
   font-family: 'Poppins';
   font-weight: 700;
-  margin: 0 auto 20px;
+  margin: 20px auto;
 }
 
 .footer span {
