--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,5 +1,34 @@
 .container {
   display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.titleContainer {
+  font-family: 'Montserrat';
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  margin: 10px 10px 20px;
+}
+
+.pageTitle {
+  font-size: 32px;
+}
+
+.line {
+  height: 2px;
+  width: 100%;
+  background-color: rgb(152, 152, 152);
+  margin: 0 10px;
+}
+
+.pageNumber {
+  font-size: 20px;
+}
+
+.movieContainer {
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 40px;
@@ -7,7 +36,7 @@
 
 .btnContainer {
   width: max-content;
-  margin: 20px auto;
+  margin: 40px auto 0;
   display: flex;
   gap: 10px;
 }
