--- a/src/components/SingleMovie.module.css
+++ b/src/components/SingleMovie.module.css
@@ -11,7 +11,9 @@
 
 .poster {
   width: 300px;
+  height: 450px;
   border-radius: 10px;
+  object-fit: cover;
 }
 
 .details {
@@ -19,10 +21,10 @@
 }
 
 .details .title {
-  font-size: 80px;
+  font-size: 60px;
   font-family: 'Montserrat';
   font-weight: 800;
-  padding: 10px 0;
+  padding-bottom: 10px;
 }
 
 .details .overview {
