--- a/src/components/SingleMovie.module.css
+++ b/src/components/SingleMovie.module.css
@@ -9,6 +9,11 @@
   border-radius: 5px;
 }
 
+.posterContainer {
+  width: 300px;
+  height: 450px;
+}
+
 .poster {
   width: 300px;
   height: 450px;
