--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -12,7 +12,8 @@
 }
 
 .movieContainer:hover {
-  box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.2);
+  box-shadow: rgba(255, 255, 255, 0.25) 0px 14px 28px,
+    rgba(255, 255, 255, 0.22) 0px 10px 10px;
 }
 
 .movieContainer .poster {
