--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
   color: var(--white);
 }
 
-/* @media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   body {
     display: none;
   }
@@ -40,4 +40,4 @@ body {
     top: 50%;
     transform: translateX(-50%);
   }
-} */
+}
