--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -50,3 +50,24 @@
   font-weight: 700;
   padding-left: 2px;
 }
+
+/* ===================== */
+/* for upto small screns */
+/* ===================== */
+
+@media (max-width: 640px) {
+  .movieContainer {
+    width: 150px;
+  }
+  .movieContainer .poster {
+    height: 225px;
+    width: 100%;
+  }
+  .movieContainer h4 {
+    font-size: 14px;
+  }
+  .rating {
+    transform: scale(0.8);
+    transform-origin: top left;
+  }
+}
