--- a/src/components/SingleMovie.module.css
+++ b/src/components/SingleMovie.module.css
@@ -68,7 +68,45 @@
 }
 
 .genres span {
+  font-size: 14px;
   background-color: darkslateblue;
   padding: 5px 10px;
   border-radius: 500px;
+}
+
+/* ===================== */
+/* for upto small screns */
+/* ===================== */
+
+@media (max-width: 640px) {
+  .movieDetails {
+    min-width: 100vw;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  .posterContainer {
+    width: 150px;
+    height: 225px;
+    margin-bottom: 20px;
+  }
+  .poster {
+    width: 150px;
+    height: 225px;
+  }
+  .details {
+    padding: 0;
+  }
+  .details .title {
+    font-size: 26px;
+    text-align: center;
+    padding: 0;
+  }
+  .details .overview {
+    font-size: 16px;
+    margin: 20px 0 40px;
+  }
+  .others {
+    margin: 0;
+  }
 }
