--- a/src/components/SingleMovie.module.css
+++ b/src/components/SingleMovie.module.css
@@ -84,6 +84,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    border-radius: 20px;
   }
   .posterContainer {
     width: 150px;
