--- a/src/layout/Layout.module.css
+++ b/src/layout/Layout.module.css
@@ -4,8 +4,14 @@
   max-width: 1280px;
 }
 
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .container {
     width: 100%;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 1024px) {
+  .container {
+    width: 95%;
   }
 }
