more UI tweaks to main page

--- a/src/components/Error.module.css
+++ b/src/components/Error.module.css
@@ -12,9 +12,9 @@
   margin-top: 20px;
 }
 
-/* ===================== */
-/* for upto small screns */
-/* ===================== */
+/* ====================== */
+/* for upto small screens */
+/* ====================== */
 
 @media (max-width: 640px) {
   .errorContainer {
