--- a/src/components/SingleMovie.module.css
+++ b/src/components/SingleMovie.module.css
@@ -74,9 +74,9 @@
   border-radius: 500px;
 }
 
-/* ===================== */
-/* for upto small screns */
-/* ===================== */
+/* ====================== */
+/* for upto small screens */
+/* ====================== */
 
 @media (max-width: 640px) {
   .movieDetails {
