--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -18,9 +18,9 @@
   color: var(--primary);
 }
 
-/* ===================== */
-/* for upto small screns */
-/* ===================== */
+/* ====================== */
+/* for upto small screens */
+/* ====================== */
 
 @media (max-width: 640px) {
   .footer {
