--- a/src/components/Loading.module.css
+++ b/src/components/Loading.module.css
@@ -13,9 +13,9 @@
   margin-top: 10px;
 }
 
-/* ===================== */
-/* for upto small screns */
-/* ===================== */
+/* ====================== */
+/* for upto small screens */
+/* ====================== */
 
 @media (max-width: 640px) {
   .loading {
