--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -68,9 +68,9 @@
   margin: 20px auto;
 }
 
-/* ===================== */
-/* for upto small screns */
-/* ===================== */
+/* ====================== */
+/* for upto small screens */
+/* ====================== */
 
 @media (max-width: 640px) {
   .titleContainer {
