--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -1,5 +1,5 @@
 .movieContainer {
-  width: 226px;
+  width: 210px;
   text-decoration: none;
   font-family: 'Poppins';
   color: white;
@@ -17,7 +17,7 @@
 }
 
 .movieContainer .poster {
-  height: 339px;
+  height: 315px;
   width: 100%;
   border-radius: 10px;
 }
@@ -51,11 +51,11 @@
   padding-left: 2px;
 }
 
-/* ===================== */
-/* for upto small screns */
-/* ===================== */
+/* ====================== */
+/* for upto small screens */
+/* ====================== */
 
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .movieContainer {
     width: 150px;
   }
@@ -65,6 +65,23 @@
   }
   .movieContainer h4 {
     font-size: 14px;
+  }
+  .rating {
+    transform: scale(0.8);
+    transform-origin: top left;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .movieContainer {
+    width: 164px;
+  }
+  .movieContainer .poster {
+    height: 246px;
+    width: 100%;
+  }
+  .movieContainer h4 {
+    font-size: 16px;
   }
   .rating {
     transform: scale(0.8);
