--- a/src/components/SingleMovie.module.css
+++ b/src/components/SingleMovie.module.css
@@ -99,7 +99,7 @@
     padding: 0;
   }
   .details .title {
-    font-size: 26px;
+    font-size: 28px;
     text-align: center;
     padding: 0;
   }
@@ -109,5 +109,39 @@
   }
   .others {
     margin: 0;
+  }
+}
+
+@media (min-width: 641px) and (max-width: 768px) {
+  .movieDetails {
+    min-width: 610px;
+  }
+  .posterContainer,
+  .poster {
+    width: 200px;
+    height: 300px;
+  }
+  .details .title {
+    font-size: 48px;
+  }
+  .details .overview {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+  .movieDetails {
+    min-width: 729px;
+  }
+  .posterContainer,
+  .poster {
+    width: 250px;
+    height: 375px;
+  }
+  .details .title {
+    font-size: 48px;
+  }
+  .details .overview {
+    font-size: 16px;
   }
 }
